--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,42 @@
-cloudpickle==2.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+cloudpickle==1.6.0
+cycler==0.11.0
+docker-pycreds==0.4.0
 filelock==3.4.0
-gym==0.21.0
+fonttools==4.29.1
+gitdb==4.0.9
+GitPython==3.1.27
+gym==0.19.0
+idna==3.3
+kiwisolver==1.3.2
+matplotlib==3.5.1
 numpy==1.21.4
+packaging==21.3
+pandas==1.4.1
+pathtools==0.1.2
 pfrl==0.3.0
 Pillow==8.4.0
+promise==2.3
+protobuf==3.19.4
+psutil==5.9.0
 pybullet==3.2.1
 -e git+https://github.com/benelot/pybullet-gym.git@bc68201c8101c4e30dde95f425647a0709ee2f29#egg=pybulletgym
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==6.0
+requests==2.27.1
+sentry-sdk==1.5.7
+setproctitle==1.2.2
+shortuuid==1.0.8
+six==1.16.0
+smmap==5.0.0
+stable-baselines3==1.4.0
+termcolor==1.1.0
 torch==1.10.0
 typing-extensions==4.0.1
+urllib3==1.26.8
+wandb==0.12.11
+yaspin==2.1.0
