--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,21 @@ dmypy.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,vscode
 
+# PyCharm
+.idea/
+
+# Windows
+desktop.ini
+
+# results
+agents/
+logs/
+models/
+results/
+runs/
+videos/
+wandb/
+
+# not sure where this comes from
+src/
+
